--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 
       <!--MUSIC-->
       <section id="music">
-        <article class="music d-flex flex-row bd-highlight flex-wrap">
+        <article class="music">
           <img class="img-fluid w-100"
             src="https://www.telegraph.co.uk/content/dam/music/2019/11/26/2722934_Philip-Hollis_MCR17jpg-My-Chemical-Romance-xlarge_trans_NvBQzQNjv4BqZgEkZX3M936N5BQK4Va8RWtT0gK_6EfZT336f62EI5U.jpg">
 
-          <div class="m-wrapper d-flex flex-row bd-highlight">
-            <div class="contact-text">
+          <div class="m-wrapper d-flex flex-column bd-highlight justify-content-center">
+            <div class="contact-text order-2">
               <h4>Lorem ipsum dolor</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed placerat libero. Quisque varius elit
                 leo, quis pharetra risus porta sit amet. Ut euismod gravida eros. Quisque orci tellus, consequat a
@@ -108,7 +108,7 @@
                 tincidunt laoreet tellus sed rutrum. In ac dolor ex. Phasellus sed purus eleifend, tempor arcu at, iaculis
                 nunc. Aenean eleifend orci purus, quis semper orci ultricies fringilla.</p>
             </div>
-            <div class="spotify">
+            <div class="spotify order-3">
               <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX9wa6XirBPv8" width="100%" height="100%"
                 frameborder="0" allowtransparency="true" allow="encrypted-media" class="player shadow-sm"></iframe>
             </div>
