--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="sv">
+<html lang="en">
 
 <head>
   <!-- Required meta tags -->
@@ -26,7 +26,7 @@
       <nav class="nav flex-row justify-content-center">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="#about">ABOUT</a>
+            <a class="nav-link" href="#main-large">ABOUT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#music">MUSIC</a>
