--- a/index.html
+++ b/index.html
@@ -103,15 +103,12 @@
 
           <div class="m-wrapper d-flex flex-column bd-highlight justify-content-center">
             <div class="contact-text order-2">
-              <h4>Lorem ipsum dolor</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed placerat libero. Quisque varius
+              <h2>Lorem ipsum dolor</h2>
+              <p><em>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed placerat libero. Quisque varius
                 elit
                 leo, quis pharetra risus porta sit amet. Ut euismod gravida eros. Quisque orci tellus, consequat a
-                convallis ac, pharetra non leo. <br>Aliquam nunc justo, finibus id lacus et, suscipit rhoncus diam.
-                Aenean
-                tincidunt laoreet tellus sed rutrum. In ac dolor ex. Phasellus sed purus eleifend, tempor arcu at,
-                iaculis
-                nunc. Aenean eleifend orci purus, quis semper orci ultricies fringilla.</p>
+                convallis ac, pharetra non leo."</em></p>
+                <p class="byline">JULIUS CEASAR</p>
             </div>
             <div class="spotify order-3">
               <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DX9wa6XirBPv8" width="100%" height="100%"
