--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="style-large.css">
 
   <title>Endless Pain</title>
+
+  <script src="https://kit.fontawesome.com/8c1b474cba.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -43,7 +45,13 @@
 
     <!--FOOTER-->
     <footer class="order-3">
-      <address>endlesspain@myspace.com</address>
+      <div>
+        <i class="far fa-envelope"></i>
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+      </div>
+    
     </footer>
 
     <!--MAIN-->
@@ -119,6 +127,9 @@
 
         </article>
       </section>
+
+
+
 
 
 
