--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <h3 class="shadow-sm">NEWS</h3>
           <div class="news">
             <article class="">
-              <img src="http://www.progarchives.com/progressive_rock_discography_covers/1245/cover_2245122992016_r.jpg" alt="Album cover">
+              <img src="https://images-na.ssl-images-amazon.com/images/I/61op6mptZML._SL1425_.jpg" alt="Album cover">
               <h4>New record out now!</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
                 sed placerat libero. Quisque varius elit leo, quis pharetra
