--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </address>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
