--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
         </button>
 
         </div>
-
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
@@ -81,7 +80,7 @@
       </address>
     </footer>
 
-    <script src="/assets/JS/index.js"></script>
+    <script src="/oskand01.github.io/JS/index.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
