--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <!-- FOOTER -->
     <footer>
       <address>
-        <p>&copy;Team 6</p>
+        <p><strong>&copy;Team 6:</strong></p>
+        <p>Abdul-Hadi Kikar, Amin Abdel Rehim, <br>Fredrik Granath, Kristoffer Wernberg, Oskar Andersson</p>
       </address>
     </footer>
 
