--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
           <!-- <p class ="alarm-header">NEW ALARM</p> -->
 
           <div class="input-container">
-            <span class="button-container"><img class="arrow" src="/media/chevron-up.svg" alt="up"><img class="arrow" src="/media/chevron-down.svg" alt="down"></span>
+            <span class="button-container left"><img class="arrow" src="/media/chevron-up.svg" alt="up"><img class="arrow" src="/media/chevron-down.svg" alt="down"></span>
             <span id="alarm-hour"></span>
             <ul class="input-list" id="hour-list"></ul>
             : <span id="alarm-min"></span>
-            <ul class="input-list" id="min-list"></ul><span class="button-container"><img class="arrow" src="/media/chevron-up.svg" alt="up"><img class="arrow" src="/media/chevron-down.svg" alt="down"></span>
+            <ul class="input-list" id="min-list"></ul><span class="button-container right"><img class="arrow" src="/media/chevron-up.svg" alt="up"><img class="arrow" src="/media/chevron-down.svg" alt="down"></span>
           </div>
           <button id="save-alarm-button">
             <img
