--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body></body>
+</html>
+
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -11,6 +21,8 @@
     <link id="style-sheet" rel="stylesheet" href="style.css" />
     <title>Alarmify</title>
   </head>
+
+
   <body>
     <div id="main-container">
       <header>
@@ -29,6 +41,8 @@
           </button>
         </div>
       </header>
+
+
       <main>
         <div id="container" class="clock-container">
           <span id="hour"></span>
@@ -38,7 +52,6 @@
         </div>
         <div id="alarm-container">
           <!-- <p class ="alarm-header">NEW ALARM</p> -->
-
           <div class="input-container">
             <span class="button-container left"
               ><img class="arrow" src="/media/chevron-up.svg" alt="up" /><img
@@ -57,15 +70,14 @@
                 alt="down"
             /></span>
           </div>
-          
+          <button id="save-alarm-button">
+            <img
+              src="/media/check.svg"
+              alt="Save alarm button"
+              title="Save Alarm"
+            />
+          </button>
         </div>
-        <button id="save-alarm-button">
-          <img
-            src="/media/check.svg"
-            alt="Save alarm button"
-            title="Save Alarm"
-          />
-        </button>
       </main>
     </div>
 
@@ -80,9 +92,6 @@
         <a href="mailto:oskand01@gmail.com"
           ><img src="/media//envelope-fill.svg" alt="email"
         /></a>
-        <!-- <a href="tel:+46739685132"
-          ><img src="/media/telephone-fill.svg" alt="phone number"
-        /></a> -->
         <a
           href="https://www.linkedin.com/in/oskar-andersson-7b486246"
           target="_blank"
