--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         /></a>
       </address>
     </footer>
-    <script src="https://oskand01.github.io/oskand01.github.io/index.js"></script>
+    <script src="https://oskand01.github.io/index.js"></script>
 
     <!-- <script src="index.js"></script> -->
   </body>
